Added get,delete and add function to databse
